--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,10 +15,9 @@
 .modal{
   position: fixed;
   background-color: $detail-color;
-  width: 450px;
-  height: 609px;
+  max-width: 1024px;
+  height: 72vh;
   margin: auto;
-  padding: 8px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -26,19 +25,122 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
+  
 }
 
+.modal__container{
+ display: flex;
+ align-items: center;
+ justify-content: space-around;
+ gap: 30px;
+ 
+}
+
+.modal-right{
+  width: 50%;
+  height: auto;
+  border: 1px;
+}
+.modal__left{
+  width: 50%;
+  height: auto;
+  border: 1px;
+}
+
+.modal{
+  &__img{
+    width: 100%;
+    height: auto;
+  }
+  &__title{
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.17;
+    text-align: left;
+  }
+  
+  &__about{
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.33;
+    text-align: left;
+
+  }
+  &__text{
+    margin: 0;
+    border-radius: 4px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    text-align: justify;
+    color: black;
+    transition: top 250ms $cubic;
+  }
+}
 .is-hidden{
   display: none;
 }
 
+.properties{
+  display: flex;
+  gap:50px;
+  &__list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  &__text{
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.33;
+    text-align: left;
+    color: #8C8C8C;
+    padding: 6px;
+    width: 90%;
+    
+  }
+  &__text-description{
+    line-height: 1.16;
+    color: black;
+  }
+  &__text-about{
+    color: black;
+  }
+  &__text-sipnosis{
+    line-height: 1.67;
+    color: black;
+    align-content: justify;
+    max-width: 396px;
+  }
+}
+
+.start{
+  width: 36px;
+  height: 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #FF6B01;
+  Color: white;
+  display: flex;
+  transition: fill 250ms $cubic;
+  justify-content: center;
+  align-items: center;
+}
+
+.g-0{
+  gap:0px;
+}
 .modal__button-close{
   position: relative;
   width: 30px;
   height: 30px;
-  left: 47%;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  right: -90%;
+  top: 1.5%;
+  border-radius: 0;
+  border: 0px solid rgba(0, 0, 0, 0.1);
   background-color: $detail-color;
   cursor: pointer;
   display: flex;
@@ -53,128 +155,70 @@
   }
 }
 
-.form{
-  &__container{
-    width: 448px;
-    margin: 0 auto;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  &__title{
-    padding-top: 40px;
-    padding-bottom: 12px;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin: auto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.172;
-    letter-spacing: 0.03em;
+.modal{
+  &__button{
+    color: #000 ;
+    background-color: #fff;
     text-align: center;
-  }
-  &__field{
-    padding-left: 10%;
-    color: #757575;
-    font-family: Roboto;
+    border: 1px solid #000;
+    width: 136px;
+    height: 44px;
+  
+    cursor: pointer;
+    border-radius: 5px;
     font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.171;
-    letter-spacing: 0.01em;
-  }
-  &__label{
+    font-weight: 500;
+    line-height: 1.33;
+    letter-spacing: 0.06em;
     outline: none;
-    &:hover > .form__input,
-    &:focus-within > .form__input,
-    &:hover > .form__textarea,
-    &:focus-within > .form__textarea{
-    border: 1px solid $primary-color;
-    }
-    &:hover, 
-    &:focus-within >.form__icon{
-      fill: $primary-color;
-    }
+    transition: color 250ms $cubic;
+  } 
+  &__button-active{
+    color: #fff ;
+    background-color: #FF6B01;
+    text-align: center;
+    border: none;
   }
 }
 
-.form{
-  &__input{
-    position: relative;
-    width: 92%;
-    height: 40px;
-    margin-top: 4px;
-    margin-bottom: 10px;
-    padding: 11px 11px 11px 41px;
-    outline: none;
-    border: 1px solid rgba(33, 33, 33, 0.2); 
-    border-image: initial;
-    border-radius: 4px;
-    outline: none;
-    cursor: pointer;
-    transition: border-color 250ms $cubic;
+// estillos de card
+.gallery{
+  &__description{
+    padding-left: 24px;
   }
-  &__icon{
-    position: absolute;
-    left: 15%;
-    margin-top: 3%;
-  }
-  &__textarea{
-    width: 92%;
-    height: 120px;
-    outline: none;
-    padding: 12px 16px;
-    margin-top: 4px;
-    margin-bottom: 10px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-image: initial;
-    border-radius: 4px;
-    resize: none;
-    transition: border-color 250ms $cubic;
-  }
-  &__check-text{
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-align: left;
-    padding-left: 36px;
-    padding-right: 36px;
+  &__list{
     display: flex;
-  }
-  &__check{
-    position: relative;
-    width: 16px;
-    height: 15px;
-    bottom: 61px;
-    left: 12px;
+    flex-wrap: wrap;
+    gap: 30px;
     cursor: pointer;
-    outline: none;
+    justify-content: center;
+  }
+  &__subtitle{
+    color: rgba(117, 117, 117, 1);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+  }
+  &__item{
+    width: 450px;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(238, 238, 238);
+    border-radius: 4px;
+    &:hover .gallery__text{
+      top: 0;
+      box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    }
+  }
+  &__container{
+    position: relative;
+    overflow: hidden;  
+  }
+
+  &__img{
+    width: 100%;
+    height: auto;
   }
 }
 
-.form__button-send{
-  color: $detail-color;
-  background-color: $primary-color;
-  text-align: center;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  padding: 12px 32px;
-  width: 200px;
-  height: 50px;
-  margin-left: 15%;
-  outline: none;
-  transition: color 250ms $cubic;
-  &:hover,
-  &:focus-within{
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
-  }
-}
