--- a/src/partials/modal-info.html
+++ b/src/partials/modal-info.html
@@ -16,7 +16,7 @@
         />
       </div>
       <div class="modal-info">
-        <h2>A FISTFUL OF LEAD</h2>
+        <h2 class="text--title" id="movie-title">A FISTFUL OF LEAD</h2>
         <ul class="properies__list list">
           <li class="properties__text text--inline">
             <p class="text--attr">Vote / Votes</p>
@@ -31,7 +31,9 @@
           </li>
           <li class="properties__text text--inline">
             <p class="text--attr">Original Title</p>
-            <p class="text--value" id="og-title">A FISTFUL OF LEAD</p>
+            <p class="text--value text--title" id="og-title">
+              A FISTFUL OF LEAD
+            </p>
           </li>
           <li class="properties__text text--inline">
             <p class="text--attr">Genre</p>
