funcion buttons add movies

--- a/src/partials/modal-info.html
+++ b/src/partials/modal-info.html
@@ -53,12 +53,12 @@
         </p>
         <ul class="btn-list">
           <li>
-            <button class="modal__button modal__button-active" add-to-watched>
+            <button class="modal__button modal__button-active">
               ADD TO WATCHED
             </button>
           </li>
           <li>
-            <button class="modal__button" add-to-queue>ADD TO QUEUE</button>
+            <button class="modal__button">ADD TO QUEUE</button>
           </li>
         </ul>
       </div>
