--- a/src/partials/modal-info.html
+++ b/src/partials/modal-info.html
@@ -16,49 +16,62 @@
         />
       </div>
       <div class="modal-info">
-        <h2 class="text--title" id="movie-title">A FISTFUL OF LEAD</h2>
-        <ul class="properies__list list">
-          <li class="properties__text text--inline">
-            <p class="text--attr">Vote / Votes</p>
-            <p class="text--rating">
-              <span class="span span--orange" id="vote"> 7.3 </span> /
-              <span class="span span--gray" id="votes"> 1260 </span>
-            </p>
-          </li>
-          <li class="properties__text text--inline">
-            <p class="text--attr">Popularity</p>
-            <p class="text--value" id="popularity">100.2</p>
-          </li>
-          <li class="properties__text text--inline">
-            <p class="text--attr">Original Title</p>
-            <p class="text--value text--title" id="og-title">
-              A FISTFUL OF LEAD
-            </p>
-          </li>
-          <li class="properties__text text--inline">
-            <p class="text--attr">Genre</p>
-            <p class="text--value" id="genre">Western</p>
-          </li>
-        </ul>
-        <p class="properties__text properties__text-about">ABOUT</p>
-        <p class="properties__text properties__text-sipnosis" id="sinopsis">
-          Four of the West’s most infamous outlaws assemble to steal a huge
-          stash of gold from the most corrupt settlement of the gold rush towns.
-          But not all goes to plan one is killed and the other three escapes
-          with bags of gold hide out in the abandoned gold mine where they
-          happen across another gang of three – who themselves were planning to
-          hit the very same bank! As tensions rise, things go from bad to worse
-          as they realise the bags of gold are filled with lead... they’ve been
-          double crossed – but by who and how?
-        </p>
-        <ul class="btn-list">
+        <ul class="info-list">
           <li>
-            <button class="modal__button modal__button-active" add-to-watched>
-              ADD TO WATCHED
-            </button>
+            <h2 class="text--title" id="movie-title">A FISTFUL OF LEAD</h2>
           </li>
           <li>
-            <button class="modal__button" add-to-queue>ADD TO QUEUE</button>
+            <ul class="properies__list">
+              <li class="properties__text text--inline">
+                <p class="text--attr">Vote / Votes</p>
+                <p class="text--rating">
+                  <span class="span span--orange" id="vote"> 7.3 </span> /
+                  <span class="span span--gray" id="votes"> 1260 </span>
+                </p>
+              </li>
+              <li class="properties__text text--inline">
+                <p class="text--attr">Popularity</p>
+                <p class="text--value" id="popularity">100.2</p>
+              </li>
+              <li class="properties__text text--inline">
+                <p class="text--attr">Original Title</p>
+                <p class="text--value text--title" id="og-title">
+                  A FISTFUL OF LEAD
+                </p>
+              </li>
+              <li class="properties__text text--inline">
+                <p class="text--attr">Genre</p>
+                <p class="text--value" id="genre">Western</p>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <p class="properties__text properties__text-about">ABOUT</p>
+            <p class="properties__text properties__text-sipnosis" id="sinopsis">
+              Four of the West’s most infamous outlaws assemble to steal a huge
+              stash of gold from the most corrupt settlement of the gold rush
+              towns. But not all goes to plan one is killed and the other three
+              escapes with bags of gold hide out in the abandoned gold mine
+              where they happen across another gang of three – who themselves
+              were planning to hit the very same bank! As tensions rise, things
+              go from bad to worse as they realise the bags of gold are filled
+              with lead... they’ve been double crossed – but by who and how?
+            </p>
+          </li>
+          <li>
+            <ul class="btn-list">
+              <li>
+                <button
+                  class="modal__button modal__button-active"
+                  add-to-watched
+                >
+                  ADD TO WATCHED
+                </button>
+              </li>
+              <li>
+                <button class="modal__button" add-to-queue>ADD TO QUEUE</button>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
