--- a/src/sass/_modal-info.scss
+++ b/src/sass/_modal-info.scss
@@ -46,7 +46,6 @@
 .text {
   &--inline {
     display: flex;
-    gap: 35px;
   }
   &--attr {
     width: 90px;
@@ -82,10 +81,7 @@
     overflow-x: hidden;
   }
   &-info {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    @media screen and(min-width:320px) {
+    @media screen and (min-width: 320px) {
       width: 236px;
       padding-bottom: 15px;
     }
@@ -213,7 +209,12 @@
 .is-hidden {
   display: none;
 }
-
+.info-list {
+  height: 100%;
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+}
 .properties {
   display: flex;
   gap: 50px;
